--- a/tensorflow-main-notes.Rmd
+++ b/tensorflow-main-notes.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "TensorFlow 快猛糙"
+title: "TensorFlow 使用"
 author: "Heyang Gong"
 date: "`r Sys.Date()`"
 output: 
@@ -15,12 +15,24 @@ knitr::opts_chunk$set(
 	message = FALSE,
 	warning = FALSE
 )
+gongfunc::set_py()
 ```
 
-This project aims to help me to use TensorFlow as soon as possible!
+This project aims to 
+
+```
+1. help me to use TensorFlow as soon as possible!
+2. 系统化的学习 tensorflow 的理论和使用
 
 
-TensorFlow is an open source software library for numerical computation using data flow graphs. 它是开源库，用于数值计算，用数据流图这个工具来实现。那么有几个问题：
+```
+
+
+
+
+# Part I: 快猛糙
+
+TensorFlow is an open source software library for numerical computation **using data flow graphs**. 它是开源库，用于数值计算，用**数据流图**这个工具来实现。那么有几个问题：
 
 - 数值计算是指什么？什么是计算？为什么说各种模型就是计算？参考计算概论课程。
 - Data flow graphs 是个什么鬼？它是计算过程的一种模拟。用图这个抽象的工具来模拟了计算过程。
@@ -41,19 +53,19 @@ TensorFlow is an open source software library for numerical computation using da
 ```
 1. Installation of TensorFlow on Ubuntu! see <github.com/rstudio/tensorflow> R中的安装如此简单愉快！ 
 2. tensorflow.rstudio.com is the first article I should carefully read.
-
+3. https://github.com/Hvass-Labs/TensorFlow-Tutorials 按照这个项目每个notebook 好好运行。
+4. Practice tensorflow with traditional algorithms.
 
 ```
 
 
-
-# 快猛糙 
+## Quick start 
 
 常见问题：
 
-1. tensor 是什么？解决了什么问题？ 
+1. tensorflow 是什么？解决了什么问题？ 
 
-他是一个API， 输入一些东西，然后它输出一些东西. It aim to help us building models.
+他是一个API， 输入一些东西，然后它输出一些东西. It aim to help us building models. --> 训练过程把循环怎么藏起来了？
 
 2. What is its core thought of create such a API?
 
@@ -67,14 +79,16 @@ sess$run(hello)
 
 ```{r}
 file.edit("scripts/simple-things.py")
-file.edit("scripts/simple-things.ipynb")
-
+# file.edit("scripts/simple-things.ipynb") 
+## 这样建立的 notebook 是无法运行的
 
 ```
 
 
 
-## tensorflow.rstudio.com
+## 用 R 快速使用 tensorflow
+
+- tensorflow.rstudio.com
 
 Tensorflow is an software library. Keras API provides a high-level interface for neural network, while estimator API is about regressors and classifiers. This website has three introduction 栏目 of Keras, Estimators and Core!
 
@@ -82,7 +96,7 @@ Tensorflow is an software library. Keras API provides a high-level interface for
 ### Estimators
 
 ```{r, eval = F, echo = T}
-devtools::install_github("rstudio/tfestimators")
+# devtools::install_github("rstudio/tfestimators")
 ```
 
 Let's have a quick start!
@@ -90,8 +104,8 @@ Let's have a quick start!
 ```{r}
 ## 准备数据
 library(tfestimators)
-indices <- sample(1:nrow(mtcars), size = 0.80 * nrow(mtcars))
-train <- mtcars[indices, ]
+indices <- sample(1:nrow(mtcars), size = 0.80 * nrow(mtcars)); str(indices)
+train <- mtcars[indices, ]; str(train)
 test  <- mtcars[-indices, ]
 
 ## 模型构建
@@ -104,14 +118,11 @@ mtcars_input_fn <- function(data) {
 cols <- feature_columns( 
   column_numeric("disp", "cyl")
 )
-model <- linear_regressor(feature_columns = cols)
-
-
-
+str(cols)
+model <- linear_regressor(feature_columns = cols);str(model)
 
 ## 运行模型
-# train the model
-model %>% train(mtcars_input_fn(train))
+model %>% train(mtcars_input_fn(train));summary(model) ## 这里似乎只训练来一轮，没有步长，也没有 epoch？ 
 
 obs <- mtcars[1:3, ]
 model %>% predict(mtcars_input_fn(obs))
@@ -235,7 +246,24 @@ for (step in 1:201) {
 我用 python 写一个和这个类似的文件。
 
 ```{r}
+getwd()
 dir.create("notebooks")
-file.create("notebooks/tensorflow-r2python.ipynb")
+# file.create("notebooks/tensorflow-r2python.ipynb")
 ```
 
+
+## Tensorflow Tutorial Codes
+
+
+https://github.com/Hvass-Labs/TensorFlow-Tutorials 是一个非常棒的库，每个模型都有 Notebooks 可以运行。
+
+## 传统ML tensorflow practice
+
+### Quick start
+
+```{r, eval=F}
+file.edit("scripts/linear-model.R")
+gongfunc::set_py()
+```
+
+# Part II: tensorflow 系统化学习
